--- a/dondEducar/dondEducar/Content/Site.css
+++ b/dondEducar/dondEducar/Content/Site.css
@@ -240,7 +240,7 @@ footer a:hover {
 }
 
 .establecimientos li .mini-imagen {
-    width: 190px;
+    width: 170px;
     height: 170px;
     float: left;
 }
@@ -250,15 +250,15 @@ footer a:hover {
     float: right;
     width: 130px;
     margin-right: 30px;
-    margin-top: 37px;
+    /*margin-top: 37px;*/
     height: 133px;
 }
 
 .establecimientos li .contenido{
     margin-left: 186px;
-    max-width: 547px;
+    max-width: 540px;
     min-height: 170px;
-    min-width: 150px;
+    min-width: 175px;
     width: 58%;
 }
 
@@ -270,7 +270,7 @@ footer a:hover {
     margin-top: 20px;
     line-height: 18px;
     margin-left: 10px;
-    width: 65%;
+    width: 90%;
     min-width: 175px;
 }
 
@@ -282,7 +282,7 @@ footer a:hover {
     font-size: 13px;
     max-width: 420px;
     color: #666;
-    width: 89%;
+    width: 90%;
 }
 
 .paginas a{
