CAmbio el back end, pongo en columnas

--- a/dondEducar/dondEducar/Content/Site.css
+++ b/dondEducar/dondEducar/Content/Site.css
@@ -221,6 +221,7 @@ footer a:hover {
 
 
 .blocks {
+    margin-left: 50px;
     -moz-column-count: 3;
     -moz-column-gap: 0;
     -webkit-column-count: 3;
