--- a/dondEducar/dondEducar/Views/Home/Establecimientos.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Establecimientos.cshtml
@@ -1,8 +1,11 @@
 ﻿@model  dondEducar.ViewModel.EstablecimientoViewModel
 
-<script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.core.min.js" type="text/javascript"></script>
-<script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.FotosParcela.min.js" type="text/javascript"></script>
+@*<script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.core.min.js" type="text/javascript"></script>
+<script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.FotosParcela.min.js" type="text/javascript"></script>*@
 <script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.GeoCoder.min.js" type="text/javascript"></script>
+
+
+ <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
 <div class="row">
 <div id="zen-intro" class="col-xs-6 col-md-4">
@@ -75,6 +78,8 @@
        
     var columnId = 8;
     var geoCoder = null;
+    var map = null;
+
     
     function SeleccionarTag(anchor) {
         var anchorId = $(anchor).attr('id');
@@ -99,24 +104,24 @@
         $(categoria).removeClass('hidden');
     };
     
-    function onLoadFotos() {	
-        /*fotosParcela.setFechaFoto($('.fecha-foto'));
-        if (fotosParcela.numFotos() > 1) {
-            $('div.foto-recorrido').show();
-        } else {
-            $('div.foto-recorrido').hide();
-        }			
-        */
-    }
+    //function onLoadFotos() {	
+    //    /*fotosParcela.setFechaFoto($('.fecha-foto'));
+    //    if (fotosParcela.numFotos() > 1) {
+    //        $('div.foto-recorrido').show();
+    //    } else {
+    //        $('div.foto-recorrido').hide();
+    //    }			
+    //    */
+    //}
     
-    function onReverseGeoCoding(data) {
-        var fotosParcela = new usig.FotosParcela(data.parcela, {maxHeight : 170, maxWidth : 170, onLoad: onLoadFotos});
-        fotosParcela.cargarFoto($("#" + establecimiento.Longitud + establecimiento.Latitud));
-    }
+    //function onReverseGeoCoding(data) {
+    //    var fotosParcela = new usig.FotosParcela(data.parcela, {maxHeight : 170, maxWidth : 170, onLoad: onLoadFotos});
+    //    fotosParcela.cargarFoto($("#" + establecimiento.Longitud + establecimiento.Latitud));
+    //}
 
-    function onReverseGeoCodingError(e) {
-        usig.debug('Se produjo un error con el geocoder inverso.');
-    };
+    //function onReverseGeoCodingError(e) {
+    //    usig.debug('Se produjo un error con el geocoder inverso.');
+    //};
 
     function CambioDePagina(numeroDePagina) {
         if (EDUCAR.Grids.PaginaActual == numeroDePagina) {
@@ -129,16 +134,19 @@
             tope = EDUCAR.Grids.TamañoDePagina;
         }
         var ul = document.createElement("ul");
+        
+        EDUCAR.Grids.DataPagina = [];
         for (var iLi = 0; iLi < tope; iLi++) {
             var indice = (EDUCAR.Grids.TamañoDePagina * (numeroDePagina - 1)) + iLi;
             var establecimiento = EDUCAR.Grids.Data[indice];
+            EDUCAR.Grids.DataPagina[iLi] = establecimiento;
             var li = document.createElement("li");
             
             var divImagen = document.createElement("div");
             divImagen.id = establecimiento.Longitud + establecimiento.Latitud;
             divImagen.className = "mini-imagen";
             
-            geoCoder.reverseGeoCoding(establecimiento.Longitud, establecimiento.Latitud, onReverseGeoCoding, onReverseGeoCodingError);
+            //geoCoder.reverseGeoCoding(establecimiento.Longitud, establecimiento.Latitud, onReverseGeoCoding, onReverseGeoCodingError);
             
             var divContenido = document.createElement("div");
             
@@ -196,16 +204,32 @@
         }
 
         $("#grid").append(ul);
-        
+        initGoogleMaps();
+
         var paginaAnterior = EDUCAR.Grids.PaginaActual;
         EDUCAR.Grids.PaginaActual = numeroDePagina;
         $("#pagina-" + paginaAnterior).removeClass("selected");
         $("#pagina-" + numeroDePagina).addClass("selected");
 
     };
+    
+    function initGoogleMaps()
+    {
+        for (var i = 0; i < EDUCAR.Grids.DataPagina.length; i++) {
+           var establecimiento = EDUCAR.Grids.DataPagina[i] ;
+            var myOptions =
+                {
+                    zoom: 18,
+                    center: new google.maps.LatLng(establecimiento.Latitud, establecimiento.Longitud),
+                    mapTypeId: google.maps.MapTypeId.HYBRID
+                };
+            new google.maps.Map(document.getElementById(establecimiento.Latitud + establecimiento.Longitud), myOptions);
+        }
+    }
+
 
     $(document).ready(function () {
-        geoCoder = new usig.GeoCoder();
+        //geoCoder = new usig.GeoCoder();
         EDUCAR.Grids.Data = @Html.Raw(Model.JsonEstablecimientos);
         EDUCAR.Grids.TotalDeFilas = EDUCAR.Grids.Data.length;
         EDUCAR.Grids.TotalDePaginas = EDUCAR.Grids.TotalDeFilas / EDUCAR.Grids.TamañoDePagina;
