--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="as-AR">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title - dondEducar.com.ar</title>
