--- a/dondEducar/dondEducar/Views/Home/Establecimiento.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Establecimiento.cshtml
@@ -1,4 +1,5 @@
-﻿@model dondEducar.Models.Establecimiento
+﻿@using dondEducar.Helpers
+@model dondEducar.Models.Establecimiento
 
 <script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.core.min.js" type="text/javascript"></script>
 <script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.FotosParcela.min.js" type="text/javascript"></script>
@@ -83,9 +84,9 @@
 <div id="mapa-google" class="mapa-google">
 </div>
 
-<div class="fb-like" data-href="@Request.Url.AbsoluteUri" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+<div class="fb-like" data-href=" @Url.ToPublicAsboluteUri()" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 
-<div class="fb-comments" data-href="@Request.Url.AbsoluteUri" data-numposts="10"></div>
+<div class="fb-comments" data-href="@Request.RawUrl" data-numposts="10"></div>
 
 
 <script >
