--- a/dondEducar/dondEducar/Views/Importar/Importar.cshtml
+++ b/dondEducar/dondEducar/Views/Importar/Importar.cshtml
@@ -3,7 +3,9 @@
     <h1>Importar</h1>
 </hgroup>
 
-<a href='@Url.Action("LimpiarBase")'class="btn btn-primary">Limpiar la Base</a>
+
+<a href='@Url.Action("LimpiarBase")'class="btn btn-danger">Limpiar la Base</a>
+<a href='@Url.Action("AgregarFourSquareIds","Importar")' class="btn btn-success"> Agregar Four Square Ids</a>
 <br />
 
 <div class="widget-content">
