--- a/dondEducar/dondEducar/Views/Home/Establecimiento.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Establecimiento.cshtml
@@ -1,5 +1,6 @@
-﻿@using dondEducar.Helpers
-@model dondEducar.Models.Establecimiento
+﻿@using System.Globalization
+@using dondEducar.Helpers
+@model dondEducar.ViewModel.EstablecimientoViewModel
 
 <script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.core.min.js" type="text/javascript"></script>
 <script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.FotosParcela.min.js" type="text/javascript"></script>
@@ -10,7 +11,7 @@
 
 @Html.AntiForgeryToken()
 
-<h2>@Html.DisplayFor(model => model.Nombre)</h2>
+<h2>@Html.DisplayFor(model => model.Establecimiento.Nombre)</h2>
 <br />
 <div class="media">
   <a class="pull-left" href="#">
@@ -26,54 +27,54 @@
                 </tr>*@
                 <tr>
                     <td></td>
-                    <td>@Html.LabelFor(model => model.Codigo)</td>
-                    <td>@Html.DisplayFor(model => model.Codigo)</td>
+                    <td>@Html.LabelFor(model => model.Establecimiento.Codigo)</td>
+                    <td>@Html.DisplayFor(model => model.Establecimiento.Codigo)</td>
         
                 </tr>
         
                 <tr class="gestion">
                     <td></td>
-                    <td>@Html.LabelFor(model => model.Gestion)</td>
-                    <td>@Html.DisplayFor(model => model.Gestion.Vista)</td>
+                    <td>@Html.LabelFor(model => model.Establecimiento.Gestion)</td>
+                    <td>@Html.DisplayFor(model => model.Establecimiento.Gestion.Vista)</td>
                 </tr>
     
-                @if (@Model.Titulo != null)
+                @if (@Model.Establecimiento.Titulo != null)
                 {
                     <tr class="titulo">
                         <td></td>
-                        <td>@Html.LabelFor(model => model.Titulo)</td>
-                        <td>@Html.DisplayFor(model => model.Titulo.Vista)</td>
+                        <td>@Html.LabelFor(model => model.Establecimiento.Titulo)</td>
+                        <td>@Html.DisplayFor(model => model.Establecimiento.Titulo.Vista)</td>
                     </tr>
                 }
         
                 <tr class="nivel-educativo">
                     <td></td>
                     <td>@Html.Label("Nivel Educativo - Tipo de Establecimiento")</td>
-                    <td>@String.Join(" | ", Model.NivelTipo)</td>
+                    <td>@String.Join(" | ", Model.Establecimiento.NivelTipo)</td>
                 </tr>
 
-                @if (!String.IsNullOrWhiteSpace(@Model.Telefonos))
+                @if (!String.IsNullOrWhiteSpace(@Model.Establecimiento.Telefonos))
                 {
                     <tr class="telefonos">
                         <td></td>
-                        <td>@Html.LabelFor(model => model.Telefonos)</td>
-                        <td>@Html.DisplayFor(model => model.Telefonos)</td>
+                        <td>@Html.LabelFor(model => model.Establecimiento.Telefonos)</td>
+                        <td>@Html.DisplayFor(model => model.Establecimiento.Telefonos)</td>
                     </tr>
                 }
-                @if (!String.IsNullOrWhiteSpace(@Model.Email))
+                @if (!String.IsNullOrWhiteSpace(@Model.Establecimiento.Email))
                 {
                     <tr class="email">
                         <td></td>
-                        <td>@Html.LabelFor(model => model.Email)</td>
-                        <td>@Html.DisplayFor(model => model.Email)</td>
+                        <td>@Html.LabelFor(model => model.Establecimiento.Email)</td>
+                        <td>@Html.DisplayFor(model => model.Establecimiento.Email)</td>
                     </tr>
                 }
-                @if (!String.IsNullOrWhiteSpace(@Model.Direccion))
+                @if (!String.IsNullOrWhiteSpace(@Model.Establecimiento.Direccion))
                 {
                     <tr class="direccion">
                         <td></td>
-                        <td>@Html.LabelFor(model => model.Direccion)</td>
-                        <td>@Html.DisplayFor(model => model.Direccion)</td>
+                        <td>@Html.LabelFor(model => model.Establecimiento.Direccion)</td>
+                        <td>@Html.DisplayFor(model => model.Establecimiento.Direccion)</td>
                     </tr>
                 }
             </table>
@@ -81,12 +82,29 @@
     </div> 
 </div>       
 
+<div>
+    <div>Informacion  de FourSquare</div>
+    <br />
+    @Html.Label("dame: ")
+    @Html.DisplayFor(x=> x.Venue.name)
+    <br />
+    @Html.Label("likes: ")
+    @Html.DisplayFor(x=> x.Venue.likes.count)
+    <br />
+    @Html.Label("description: ")
+    @Html.DisplayFor(x=> x.Venue.description)
+    <br />
+    @Html.Label("CanonicalUrl: ")
+    @Html.DisplayFor(x=> x.Venue.canonicalUrl)
+    <br />
+</div>
+
 <div id="mapa-google" class="mapa-google">
 </div>
 
-<div class="fb-like" data-href=" @Url.ToPublicAsboluteUri()" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+@*<div class="fb-like" data-href=" @Url.ToPublicAsboluteUri()" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 
-<div class="fb-comments" data-href="@Request.RawUrl" data-numposts="10"></div>
+<div class="fb-comments" data-href="@Request.RawUrl" data-numposts="10"></div>*@
 
 
 <script >
@@ -114,8 +132,8 @@
     };
     $(document).ready(function () {
         geoCoder = new usig.GeoCoder();
-        var longitud = '@Model.Longitud'.replace(',','.');
-        var latitud = '@Model.Latitud'.replace(',', '.');
+        var longitud = '@Model.Establecimiento.Longitud.ToString(CultureInfo.InvariantCulture.NumberFormat)';
+        var latitud = '@Model.Establecimiento.Latitud.ToString(CultureInfo.InvariantCulture.NumberFormat)';
         geoCoder.reverseGeoCoding(longitud, latitud, onReverseGeoCoding, onReverseGeoCodingError);
         
        @* var myOptions =
