--- a/dondEducar/dondEducar/Views/Home/Index.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Index.cshtml
@@ -3,19 +3,19 @@
 <br />
 <div class="blocks">
     <a href='@Url.Action("ListaEstablecimientos", new {nivelEducativo = "Inicial"})'>   
-        <img style="width: 400px; height: 300px;" src='@Url.Content("Content/images/botonInicial.png")' alt="Nivel Inicial" >
+        <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonInicial.png")' alt="Nivel Inicial" >
     </a>
     <a href='@Url.Action("ListaEstablecimientos", new {nivelEducativo = "Secundario"})'>    
-        <img style="width: 400px; height: 300px;" src='@Url.Content("Content/images/botonSecundario.png")' alt="Nivel Secundario">
+        <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonSecundario.png")' alt="Nivel Secundario">
     </a>
     <a href='@Url.Action("ListaEstablecimientos", new {nivelEducativo = "Primario"})'>
-        <img style="width: 400px; height: 600px;" src='@Url.Content("Content/images/botonPrimario.png")' alt="Nivel Primario">
+        <img style="width: 400px; height: 600px;" src='@Url.Content("~/Content/images/botonPrimario.png")' alt="Nivel Primario">
     </a>
     <a href='@Url.Action("ListaEstablecimientos", new {nivelEducativo = "Otros"})'>
-        <img style="width: 400px; height: 300px;" src='@Url.Content("Content/images/botonOtros.png")' alt="Otros tipos de Establecimientos">
+        <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonOtros.png")' alt="Otros tipos de Establecimientos">
     </a>
     <a href='@Url.Action("ListaEstablecimientos", new {nivelEducativo = "Superior"})'>
-        <img style="width: 400px; height: 300px;" src='@Url.Content("Content/images/botonSuperior.png")' alt="Nivel Superior">
+        <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonSuperior.png")' alt="Nivel Superior">
     </a>
 </div>
 
